--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -34,14 +34,21 @@ jobs:
     steps:
       - name: Configure Git to use HTTP/1.1
         shell: bash
-        run: git config --global http.version HTTP/1.1
+        run: |
+          git config --global http.version HTTP/1.1
+          git config --global http.postBuffer 524288000
       - name: Checkout current repo
         uses: actions/checkout@v5
         with:
           fetch-depth: 1
       - name: Shallow clone submodules
         shell: bash
-        run: git submodule update --init --recursive --depth=1
+        run: |
+          for i in 1 2 3; do
+            git submodule update --init --recursive --depth=1 && break
+            echo "Submodule checkout failed. Retrying in 10 seconds..."
+            sleep 10
+          done
       - name: Get version
         shell: bash
         run: |
