--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -206,11 +206,15 @@ jobs:
           # Since the cache must be invalidated when content of the vcpkg.json file changes, let's
           # compute its hash and append this to the computed cache's key.
           appendedCacheKey: ${{ hashFiles( '**/vcpkg_manifest/vcpkg.json' ) }}
-          vcpkgTriplet: ${{ matrix.triplet }}
+          vcpkgTriplet:
           # Ensure the vcpkg artifacts are cached, they are generated in the 'CMAKE_BINARY_DIR/vcpkg_installed' directory.
           additionalCachedPaths: ${{ github.workspace }}/vcpkg
           # Use vcpkgArguments to perform the installation
-          vcpkgArguments: 'gperf openssl zlib'
+          runVcpkgInstall: true
+          vcpkgJsonGlob: '${{ github.workspace }}/.github/workflows/vcpkg/vcpkg.json'
+        env:
+          VCPKG_DEFAULT_TRIPLET: ${{ matrix.triplet }}
+
       - name: Upload vcpkg build logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
